# jarvis-v3

./: .gitignore  README.md  config.yaml  pyproject.toml
.claude/: CLAUDE.md  CODEBASE.md
.claude/docs/: audio.md  listener.md  pvad.md  web-mode-spec.md  web.md
.claude/knowledge/: mlx-audio.md  v2-lessons.md
docs/: migration-to-openai.md
jarvis/: __init__.py  audio_buffer.py  cli.py  config.py  listener.py  pipeline.py  polisher.py  realtime_api.py  speaker.py  transcriber.py  vad.py
jarvis/web/: __init__.py  server.py
reference/pipecat-macos/: bot.py  kokoro_worker.py
tests/: test_config.py  test_listener.py  test_transcriber.py  test_vad.py
web/: correlator.js  index.html
