[project]
name = "jarvis-v3"
version = "0.1.0"
description = "Voice interface for Claude Code — Parakeet STT + MLX TTS on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.5",
    "mlx-audio[tts]>=0.3",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pyyaml>=6",
    "onnxruntime>=1.17",
    "scipy>=1.12",
    "transformers>=4.37",
    "spacy>=3.8",
    "en_core_web_sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
