[project]
name = "jarvis-v3"
version = "0.1.0"
description = "Voice interface for Claude Code — OpenAI Realtime API (STT) + OpenAI TTS"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pyyaml>=6",
    "scipy>=1.12",
    "httpx>=0.27",
    "websockets>=13",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
